2005-09-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/compile.el (compilation-goto-locus): Take into account
	iconified frames when determining whether the buffer is
	already visible.
	Don't reset window height if the window already existed.

2005-09-04  Chong Yidong  <cyd@stupidchicken.com>

	* custom.el (load-theme): Rename from require-theme.
	Add interactive spec.
	(enable-theme): Rename from custom-enable-theme.
	Add interactive spec.
	(disable-theme): Rename from custom-disable-theme.
	Add interactive spec.
	(custom-make-theme-feature): Doc fix.
	(custom-theme-directory): Doc fix.
	(provide-theme): Call enable-theme.

2005-09-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* obsolete/lazy-lock.el (lazy-lock-mode):
	* obsolete/fast-lock.el (fast-lock-mode): Don't try to turn on
	font-lock-mode if it's off.  Print a warning instead.

	* progmodes/compile.el (compilation-start): Ignore errors if the
	process died before we get to send-eof.

	* textmodes/tex-mode.el (tex-send-tex-command, tex-bibtex-file):
	Undo last change.  Enclosing the result in quotes broke things on Unix
	since tex-send-command passes it through shell-quote-argument.
	(tex-send-command): Pass `file' through convert-standard-filename
	when possible.
	(tex-uptodate-p): Handle the case where TeX hasn't put additional
	info in a transcript.

2005-09-02  Dan Nicolaescu  <dann@ics.uci.edu>

	* term/xterm.el (terminal-init-xterm): Add eval-when-compile to
	fix compilation warning. Reorder the key definitions to group
	together keys emitted by the current version of xterm.

	* progmodes/vhdl-mode.el (vhdl-highlight-faces)
	(vhdl-speedbar-entity-face, vhdl-speedbar-entity-selected-face):
	Reorder predicates to correct min-color usage.

2005-09-01  Chong Yidong  <cyd@stupidchicken.com>

	* longlines.el (longlines-mode): Inhibit read-only when encoding.
	Kill local variables when longlines-mode is turned off.

2005-09-01  Stefan Monnier  <monnier@iro.umontreal.ca>
